<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
<!--   // -->
    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_profile"-->
<!--            android:icon="@drawable/ic_person"-->
<!--            android:title="@string/profile_menu" />-->
        <item
            android:id="@+id/nav_home1"
            android:icon="@drawable/ic_home"
            android:title="@string/home_menu"
            />
        <item
            android:id="@+id/nav_policy1"
            android:icon="@drawable/ic_policy"
            android:title="@string/policy_menu" />

        <item
            android:id="@+id/nav_claim1"
            android:icon="@drawable/ic_claim"
            android:title="@string/claim_menu" />

    </group>
</menu>