<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projectinsurance.ui.home.HomeFragment"
        android:label="@string/home_menu"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_policy"
        android:name="com.example.projectinsurance.ui.gallery.GalleryFragment"
        android:label="@string/policy_menu"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_claim"
        android:name="com.example.projectinsurance.ui.slideshow.SlideshowFragment"
        android:label="@string/claim_menu"
        tools:layout="@layout/fragment_slideshow" />
</navigation>